hphp/test/zend/bad/ext/gmp/tests/cast.php
<?php

$n = gmp_init(42);
echo $n, "\n";
var_dump((string) $n);
var_dump((int) $n);
var_dump((float) $n);
var_dump((bool) $n);

?>
